# SuperPnL

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: BACKTEST_AND_EVALUATION_PLAN.md  BITPRO_STRATEGY_PROMPT.md  DOWNSTREAM_USAGE.md  EXPERIMENT_AND_EVALUATION_PLAN.md  FACTORBARNET_DESIGN_SPEC.md  FACTOR_SCHEMA_V1.md  FEATURE_SCHEMA.md  HUGGINGFACE_MODEL_USAGE.md  REPRODUCIBILITY_AND_TOP20_UNIVERSE.md  SUPERPNL_DESIGN_SPEC.md  TOP20_12M_EXPERIMENT_REPORT.md
scripts/: download_okx_spot_1m.py  package_superpnl_model.py  plot_horizon_comparison.py  run_superpnl_experiment.py
src/factorbarnet/: __init__.py
src/superpnl/: __init__.py  data.py  metrics.py  model.py  training.py
