[project]
name = "factorbarnet"
version = "0.1.0"
description = "Factor-enhanced multi-horizon K-line forecasting for crypto spot and perpetual markets"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "torch",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
