[project]
name = "superpnl"
version = "0.1.0"
description = "PnL-first prediction modeling research framework focused first on spot crypto positions"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "torch",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
